--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node generate_report_v4.js && node inject_branches.js && node inject_store_list.js && node inject_voc.js"
   },
   "keywords": [],
   "author": "",
