--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "csv-parse": "^6.1.0"
+    "@google/generative-ai": "^0.24.1",
+    "csv-parse": "^6.1.0",
+    "dotenv": "^17.3.1",
+    "fflate": "^0.8.2"
   }
 }
